# scrapegraph-test

./: .gitignore  README.md  main.py  pyproject.toml
data/: FAQ（中文特別班）.txt  一般工作證.txt  交通 and related l.txt  僑生傷病醫療保險.txt  入臺證件 (適用於僑港澳學生).txt  全民健康保險.txt  各校區地圖 and related l.txt  國立成功大學國際事務處常見問題.txt  圖書館.txt  境外生工讀媒合平台.txt  境外生常見問題.txt  學生團體保險 and related l.txt  學生平安保險 and related l.txt  就業金卡.txt  居留證 (停留超過6個月以上).txt  急難救助法規 and related l.txt  急難救助申請辦法 and related l.txt  成績單和其他證書.txt  新生入學手冊、入境指南.txt  校內外住宿.txt  校安中心 and related l.txt  申訴及法律諮詢.txt  申請辦法.txt  畢業後就業實習補充.txt  祈禱室 and related l.txt  簽證 (含依親).txt  註冊、報到.txt  請假.txt  運動場所 and related l.txt  選課行事曆.txt  選課須知及系統 and related l.txt  陸生保險,學生平安保險,急難救助.txt  陸生常見問題.txt  離校手續.txt  飲食.txt  體檢.txt
src/: config.py  main.py  main_pipeline.py  main_scraper.py
src/pipeline/: post_process.py  save_result.py  update_file.py
src/pipeline1/: access_token.py  delegated_token.py  item_drive_id.py  update_file.py
src/scraper/: scraper_methods.py  scraper_schema.py
test/: mongo.py  omni_scraper_graph.json  smart_scraper_graph.json  smart_scraper_multi_graph.json
